[package]
name = "flag-algebra"
version = "0.1.11"
authors = ["Rémi de Verclos <remi.de.verclos@gmail.com>"]
description = "An implementation of Razborov's flag algebras"
publish = true
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/flag-algebra"
repository = "https://github.com/avangogo/rust-flag-algebra"
license = "GPL-3.0"
keywords = ["flag", "algebra", "graph", "combinatorics"]

[dependencies]
num = "0.4.0"
sprs = { version = "0.11.1", features = ["serde"] }
ndarray = "0.15.6"
find_folder = "0.3.0"
rand = "0.8.5"
serde = "1.0.164"
serde_derive = "1.0.164"
bincode = "1.3.3"
canonical-form = "0.10.0"
typenum = "1.16.0"
svg = "0.13.1"
simplelog = "0.8.0"
ndarray-linalg = { version = "0.16.0", features = ["netlib"] }
failure = "0.1.8"
failure_derive = "0.1.8"
arrayvec = "0.7.4"
log = "0.4.19"

[dev-dependencies]
criterion = "0.3.6"

#[[bench]]
#name = "my_benchmark"
#harness = false
#debug = true
