[package]
name = "flag-algebra"
version = "0.4.0"
authors = ["Rémi de Verclos <remi.de.verclos@gmail.com>"]
description = "An implementation of Razborov's flag algebras"
publish = true
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/flag-algebra"
repository = "https://github.com/avangogo/rust-flag-algebra"
license = "GPL-3.0"
keywords = ["flag", "algebra", "graph", "combinatorics"]

[dependencies]
num = "0.4.3"
sprs = { version = "0.11.1", features = ["serde"] }
ndarray = "0.16.1"
find_folder = "0.3.0"
rand = "0.8.5"
serde = "1.0.209"
serde_derive = "1.0.195"
bincode = "1.3.3"
canonical-form = "0.10.0"
typenum = "1.17.0"
svg = "0.17.0"
simplelog = "0.12.2"
ndarray-linalg = { version = "0.16.0", features = ["netlib"] }
failure = "0.1.8"
failure_derive = "0.1.8"
arrayvec = "0.7.6"
log = "0.4.22"
thiserror = "1.0.63"
const_format = "0.2.32"
flate2 = "1.0.33"

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.12.0"
criterion = "0.5.1"
