[package]
name = "flag-algebra"
version = "0.4.0"
authors = ["Rémi de Verclos <remi.deverclos@gmail.com>"]
description = "An implementation of Razborov's flag algebras"
publish = true
edition = "2024"
readme = "README.md"
documentation = "https://docs.rs/flag-algebra"
repository = "https://github.com/avangogo/rust-flag-algebra"
license = "GPL-3.0"
keywords = ["flag", "algebra", "graph", "combinatorics"]

[dependencies]
num = "0.4.3"
sprs = { version = "0.11.3", features = ["serde"] }
ndarray = "0.16.1"
find_folder = "0.3.0"
rand = "0.9.0"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3.3"
canonical-form = "0.10.0"
typenum = "1.17.0"
svg = "0.17.0"
env_logger = "0.11.7"
ndarray-linalg = { version = "0.17.0" }
failure = "0.1.8"
failure_derive = "0.1.8"
arrayvec = "0.7.6"
log = "0.4.26"
thiserror = "1.0.64"
const_format = "0.2.34"
flate2 = "1.1.0"

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.19.1"
criterion = "0.5.1"
